cmake_minimum_required(VERSION 3.16)

project(university-cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(university-cpp vorontsov-ac4-lab-0.cpp)

include(GNUInstallDirs)
install(TARGETS university-cpp
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
